--- a/inSooqApp/Base.lproj/Misc.storyboard
+++ b/inSooqApp/Base.lproj/Misc.storyboard
@@ -632,10 +632,17 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Ghi-2w-3J0">
-                                <rect key="frame" x="40" y="94.5" width="334" height="717"/>
+                                <rect key="frame" x="40" y="203" width="334" height="500"/>
                                 <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a7x-2I-Vjc">
+                                        <rect key="frame" x="0.0" y="0.0" width="334" height="8"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="8" id="Zxn-oy-PqO"/>
+                                        </constraints>
+                                    </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tf8-ry-6Q2">
-                                        <rect key="frame" x="0.0" y="0.0" width="334" height="60"/>
+                                        <rect key="frame" x="0.0" y="16" width="334" height="60"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last step" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gbA-MH-VKG">
                                                 <rect key="frame" x="8" y="4" width="318" height="20.5"/>
@@ -662,7 +669,7 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DoE-8k-eCm" userLabel="Plan_Free">
-                                        <rect key="frame" x="0.0" y="68" width="334" height="60"/>
+                                        <rect key="frame" x="0.0" y="84" width="334" height="60"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="m6s-b2-AwA">
                                                 <rect key="frame" x="4" y="4" width="326" height="52"/>
@@ -732,7 +739,7 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="veS-U7-RH2">
-                                        <rect key="frame" x="0.0" y="136" width="334" height="60"/>
+                                        <rect key="frame" x="0.0" y="152" width="334" height="60"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last step" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sg3-A8-vXj">
                                                 <rect key="frame" x="8" y="4" width="318" height="20.5"/>
@@ -759,7 +766,7 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nmy-IY-GoG" userLabel="Plan_3_Days">
-                                        <rect key="frame" x="0.0" y="204" width="334" height="60"/>
+                                        <rect key="frame" x="0.0" y="220" width="334" height="60"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NCp-wW-g8V">
                                                 <rect key="frame" x="4" y="4" width="326" height="52"/>
@@ -818,7 +825,7 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LnY-dc-OuM" userLabel="Plan_3_Days">
-                                        <rect key="frame" x="0.0" y="272" width="334" height="60"/>
+                                        <rect key="frame" x="0.0" y="288" width="334" height="60"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fwq-G6-hWU">
                                                 <rect key="frame" x="4" y="4" width="326" height="52"/>
@@ -877,7 +884,7 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EVm-uA-Ya4" userLabel="Plan_3_Days">
-                                        <rect key="frame" x="0.0" y="340" width="334" height="60"/>
+                                        <rect key="frame" x="0.0" y="356" width="334" height="60"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="imR-T0-brf">
                                                 <rect key="frame" x="4" y="4" width="326" height="52"/>
@@ -936,7 +943,7 @@
                                         </constraints>
                                     </view>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2ME-8v-qKL">
-                                        <rect key="frame" x="0.0" y="408" width="334" height="60"/>
+                                        <rect key="frame" x="0.0" y="424" width="334" height="60"/>
                                         <color key="backgroundColor" name="labelOrange"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="60" id="Zhv-eb-s2g"/>
@@ -949,17 +956,19 @@
                                         </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Iut-5L-7PN">
-                                        <rect key="frame" x="0.0" y="476" width="334" height="241"/>
+                                        <rect key="frame" x="0.0" y="492" width="334" height="8"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="8" id="0dc-hR-tHI"/>
+                                        </constraints>
                                     </view>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemGray6Color"/>
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="ijC-l0-4iO"/>
-                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Ghi-2w-3J0" firstAttribute="top" secondItem="ijC-l0-4iO" secondAttribute="top" constant="50.5" id="CMI-8s-bKU"/>
                             <constraint firstItem="Ghi-2w-3J0" firstAttribute="centerY" secondItem="ijC-l0-4iO" secondAttribute="centerY" id="FHT-xS-lTz"/>
                             <constraint firstItem="ijC-l0-4iO" firstAttribute="trailing" secondItem="Ghi-2w-3J0" secondAttribute="trailing" constant="40" id="Ih0-uo-dFk"/>
                             <constraint firstItem="Ghi-2w-3J0" firstAttribute="leading" secondItem="ijC-l0-4iO" secondAttribute="leading" constant="40" id="MYf-5g-ZEG"/>
