--- a/inSooqApp/Controllers/Forms/Elements/PhotoPicker/FormPhotoPicker.xib
+++ b/inSooqApp/Controllers/Forms/Elements/PhotoPicker/FormPhotoPicker.xib
@@ -56,21 +56,21 @@
                                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="FSo-8A-loy">
                                             <rect key="frame" x="4" y="4" width="276" height="91.5"/>
                                             <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="top" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZNc-gw-D3H">
+                                                <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="top" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZNc-gw-D3H" userLabel="B1">
                                                     <rect key="frame" x="0.0" y="0.0" width="89.5" height="91.5"/>
                                                     <color key="backgroundColor" systemColor="systemGray5Color"/>
                                                     <color key="tintColor" systemColor="systemOrangeColor"/>
                                                     <state key="normal" title="Button"/>
                                                     <buttonConfiguration key="configuration" style="plain" title="X"/>
                                                 </button>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="top" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jQo-kO-4aH">
+                                                <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="top" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jQo-kO-4aH" userLabel="B2">
                                                     <rect key="frame" x="93.5" y="0.0" width="89" height="91.5"/>
                                                     <color key="backgroundColor" systemColor="systemGray5Color"/>
                                                     <color key="tintColor" systemColor="systemOrangeColor"/>
                                                     <state key="normal" title="Button"/>
                                                     <buttonConfiguration key="configuration" style="plain" title="X"/>
                                                 </button>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="top" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m7n-Dm-bbF">
+                                                <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="top" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m7n-Dm-bbF" userLabel="B3">
                                                     <rect key="frame" x="186.5" y="0.0" width="89.5" height="91.5"/>
                                                     <color key="backgroundColor" systemColor="systemGray5Color"/>
                                                     <color key="tintColor" systemColor="systemOrangeColor"/>
@@ -95,21 +95,21 @@
                                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="0Sb-eF-lnm">
                                             <rect key="frame" x="4" y="4" width="276" height="86.5"/>
                                             <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="top" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ngi-5u-L94">
+                                                <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="top" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ngi-5u-L94" userLabel="B4">
                                                     <rect key="frame" x="0.0" y="0.0" width="89.5" height="86.5"/>
                                                     <color key="backgroundColor" systemColor="systemGray5Color"/>
                                                     <color key="tintColor" systemColor="systemOrangeColor"/>
                                                     <state key="normal" title="Button"/>
                                                     <buttonConfiguration key="configuration" style="plain" title="X"/>
                                                 </button>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="top" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Cg-kV-8a5">
+                                                <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="top" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Cg-kV-8a5" userLabel="B5">
                                                     <rect key="frame" x="93.5" y="0.0" width="89" height="86.5"/>
                                                     <color key="backgroundColor" systemColor="systemGray5Color"/>
                                                     <color key="tintColor" systemColor="systemOrangeColor"/>
                                                     <state key="normal" title="Button"/>
                                                     <buttonConfiguration key="configuration" style="plain" title="X"/>
                                                 </button>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="top" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xiz-Cf-b5P">
+                                                <button opaque="NO" tag="6" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="top" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xiz-Cf-b5P" userLabel="B6">
                                                     <rect key="frame" x="186.5" y="0.0" width="89.5" height="86.5"/>
                                                     <color key="backgroundColor" systemColor="systemGray5Color"/>
                                                     <color key="tintColor" systemColor="systemOrangeColor"/>
@@ -130,14 +130,62 @@
                                 </view>
                             </subviews>
                         </stackView>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bFa-cP-JVF" userLabel="IV1">
+                            <rect key="frame" x="8" y="98" width="89.5" height="91.5"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </imageView>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="h0L-C3-KOh" userLabel="IV2">
+                            <rect key="frame" x="101.5" y="98" width="89" height="91.5"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </imageView>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PFP-Hc-g5J" userLabel="IV3">
+                            <rect key="frame" x="194.5" y="98" width="89.5" height="91.5"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </imageView>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Big-Hm-afk" userLabel="IV4">
+                            <rect key="frame" x="8" y="197.5" width="89.5" height="86.5"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </imageView>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hoO-br-sRx" userLabel="IV5">
+                            <rect key="frame" x="101.5" y="197.5" width="89" height="86.5"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </imageView>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EPZ-Xi-905" userLabel="IV6">
+                            <rect key="frame" x="194.5" y="197.5" width="89.5" height="86.5"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </imageView>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
+                        <constraint firstItem="Big-Hm-afk" firstAttribute="width" secondItem="Ngi-5u-L94" secondAttribute="width" id="4yI-fL-YP7"/>
+                        <constraint firstItem="bFa-cP-JVF" firstAttribute="centerY" secondItem="ZNc-gw-D3H" secondAttribute="centerY" id="5wg-9i-uVi"/>
+                        <constraint firstItem="Big-Hm-afk" firstAttribute="centerY" secondItem="Ngi-5u-L94" secondAttribute="centerY" id="7i0-ut-zNj"/>
                         <constraint firstAttribute="height" constant="292" id="Bbl-gU-0ur"/>
+                        <constraint firstItem="hoO-br-sRx" firstAttribute="width" secondItem="8Cg-kV-8a5" secondAttribute="width" id="D8P-y0-jKj"/>
+                        <constraint firstItem="PFP-Hc-g5J" firstAttribute="width" secondItem="m7n-Dm-bbF" secondAttribute="width" id="DiG-gQ-kK0"/>
                         <constraint firstAttribute="trailing" secondItem="v6k-oJ-IYW" secondAttribute="trailing" constant="4" id="Gzh-az-tMj"/>
+                        <constraint firstItem="hoO-br-sRx" firstAttribute="centerX" secondItem="8Cg-kV-8a5" secondAttribute="centerX" id="LYl-pT-47s"/>
+                        <constraint firstItem="EPZ-Xi-905" firstAttribute="height" secondItem="Xiz-Cf-b5P" secondAttribute="height" id="MvN-sb-qpd"/>
+                        <constraint firstItem="hoO-br-sRx" firstAttribute="height" secondItem="8Cg-kV-8a5" secondAttribute="height" id="S3w-t5-YSU"/>
+                        <constraint firstItem="bFa-cP-JVF" firstAttribute="width" secondItem="ZNc-gw-D3H" secondAttribute="width" id="SQo-Pd-F0t"/>
+                        <constraint firstItem="PFP-Hc-g5J" firstAttribute="height" secondItem="m7n-Dm-bbF" secondAttribute="height" id="Th4-xu-btv"/>
                         <constraint firstItem="v6k-oJ-IYW" firstAttribute="top" secondItem="vNW-mS-wST" secondAttribute="top" constant="4" id="WVk-VH-vDl"/>
                         <constraint firstAttribute="bottom" secondItem="v6k-oJ-IYW" secondAttribute="bottom" constant="4" id="X4O-lz-APr"/>
                         <constraint firstItem="v6k-oJ-IYW" firstAttribute="leading" secondItem="vNW-mS-wST" secondAttribute="leading" constant="4" id="XLc-oH-cYP"/>
+                        <constraint firstItem="Big-Hm-afk" firstAttribute="centerX" secondItem="Ngi-5u-L94" secondAttribute="centerX" id="Xp2-Um-2Db"/>
+                        <constraint firstItem="h0L-C3-KOh" firstAttribute="centerY" secondItem="jQo-kO-4aH" secondAttribute="centerY" id="aQ9-gI-m2a"/>
+                        <constraint firstItem="bFa-cP-JVF" firstAttribute="height" secondItem="ZNc-gw-D3H" secondAttribute="height" id="bZF-LL-Xt4"/>
+                        <constraint firstItem="EPZ-Xi-905" firstAttribute="width" secondItem="Xiz-Cf-b5P" secondAttribute="width" id="e7T-on-rHz"/>
+                        <constraint firstItem="h0L-C3-KOh" firstAttribute="centerX" secondItem="jQo-kO-4aH" secondAttribute="centerX" id="fmD-NW-Npy"/>
+                        <constraint firstItem="PFP-Hc-g5J" firstAttribute="centerY" secondItem="m7n-Dm-bbF" secondAttribute="centerY" id="fqw-Ub-mjg"/>
+                        <constraint firstItem="hoO-br-sRx" firstAttribute="centerY" secondItem="8Cg-kV-8a5" secondAttribute="centerY" id="gl4-9Z-z8Y"/>
+                        <constraint firstItem="EPZ-Xi-905" firstAttribute="centerX" secondItem="Xiz-Cf-b5P" secondAttribute="centerX" id="h50-iL-eu0"/>
+                        <constraint firstItem="PFP-Hc-g5J" firstAttribute="centerX" secondItem="m7n-Dm-bbF" secondAttribute="centerX" id="hpr-5K-jZr"/>
+                        <constraint firstItem="h0L-C3-KOh" firstAttribute="width" secondItem="jQo-kO-4aH" secondAttribute="width" id="iAK-Og-IJz"/>
+                        <constraint firstItem="bFa-cP-JVF" firstAttribute="centerX" secondItem="ZNc-gw-D3H" secondAttribute="centerX" id="pzU-Rk-LYp"/>
+                        <constraint firstItem="Big-Hm-afk" firstAttribute="height" secondItem="Ngi-5u-L94" secondAttribute="height" id="sh8-QM-rMr"/>
+                        <constraint firstItem="h0L-C3-KOh" firstAttribute="height" secondItem="jQo-kO-4aH" secondAttribute="height" id="tVU-S0-g5p"/>
+                        <constraint firstItem="EPZ-Xi-905" firstAttribute="centerY" secondItem="Xiz-Cf-b5P" secondAttribute="centerY" id="uoa-UR-kL7"/>
                     </constraints>
                 </view>
             </subviews>
@@ -152,6 +200,20 @@
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <connections>
+                <outlet property="button1" destination="ZNc-gw-D3H" id="jjM-u1-TeJ"/>
+                <outlet property="button2" destination="jQo-kO-4aH" id="ysc-JW-ua4"/>
+                <outlet property="button3" destination="m7n-Dm-bbF" id="bkm-Hg-ffc"/>
+                <outlet property="button4" destination="Ngi-5u-L94" id="0Jk-Bv-4cE"/>
+                <outlet property="button5" destination="8Cg-kV-8a5" id="FEw-ad-1Dc"/>
+                <outlet property="button6" destination="Xiz-Cf-b5P" id="wcR-6I-liW"/>
+                <outlet property="photo1" destination="bFa-cP-JVF" id="4Vp-TM-q0a"/>
+                <outlet property="photo2" destination="h0L-C3-KOh" id="PoP-VJ-iLY"/>
+                <outlet property="photo3" destination="PFP-Hc-g5J" id="pRH-Or-FDV"/>
+                <outlet property="photo4" destination="Big-Hm-afk" id="dqc-8r-M2s"/>
+                <outlet property="photo5" destination="hoO-br-sRx" id="tWx-D8-FDa"/>
+                <outlet property="photo6" destination="EPZ-Xi-905" id="UKf-GM-Nyb"/>
+            </connections>
             <point key="canvasLocation" x="139" y="153"/>
         </view>
     </objects>
