--- a/inSooqApp/Controllers/Forms/Elements/FormFile/FormFile.xib
+++ b/inSooqApp/Controllers/Forms/Elements/FormFile/FormFile.xib
@@ -18,6 +18,11 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oEr-bK-hL1">
                     <rect key="frame" x="4" y="4" width="406" height="92"/>
                     <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s3g-AQ-FfS">
+                            <rect key="frame" x="8" y="8" width="390" height="76"/>
+                            <state key="normal" title="Button"/>
+                            <buttonConfiguration key="configuration" style="plain" title=" "/>
+                        </button>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="main_photo_icon" translatesAutoresizingMaskIntoConstraints="NO" id="Rfw-RM-8IT">
                             <rect key="frame" x="8" y="12" width="68" height="68"/>
                             <constraints>
@@ -26,7 +31,7 @@
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ADD YOUR CV" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pV7-Kz-Ugx">
-                            <rect key="frame" x="92" y="36" width="115" height="20"/>
+                            <rect key="frame" x="92" y="36" width="298" height="20"/>
                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -35,9 +40,14 @@
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
                         <constraint firstItem="pV7-Kz-Ugx" firstAttribute="leading" secondItem="Rfw-RM-8IT" secondAttribute="trailing" constant="16" id="6B2-xf-b3t"/>
+                        <constraint firstItem="s3g-AQ-FfS" firstAttribute="leading" secondItem="oEr-bK-hL1" secondAttribute="leading" constant="8" id="EVl-cZ-jtY"/>
                         <constraint firstItem="Rfw-RM-8IT" firstAttribute="leading" secondItem="oEr-bK-hL1" secondAttribute="leading" constant="8" id="GKL-yQ-F9I"/>
                         <constraint firstAttribute="height" constant="92" id="Rqm-XK-Lnb"/>
+                        <constraint firstAttribute="trailing" secondItem="pV7-Kz-Ugx" secondAttribute="trailing" constant="16" id="V8s-gL-upR"/>
                         <constraint firstItem="pV7-Kz-Ugx" firstAttribute="centerY" secondItem="Rfw-RM-8IT" secondAttribute="centerY" id="VgI-8W-QcR"/>
+                        <constraint firstAttribute="trailing" secondItem="s3g-AQ-FfS" secondAttribute="trailing" constant="8" id="bRs-Sw-w6p"/>
+                        <constraint firstItem="s3g-AQ-FfS" firstAttribute="top" secondItem="oEr-bK-hL1" secondAttribute="top" constant="8" id="dVr-SL-USI"/>
+                        <constraint firstAttribute="bottom" secondItem="s3g-AQ-FfS" secondAttribute="bottom" constant="8" id="iKE-kn-rXe"/>
                         <constraint firstAttribute="bottom" secondItem="Rfw-RM-8IT" secondAttribute="bottom" constant="12" id="rQs-4V-30g"/>
                         <constraint firstItem="Rfw-RM-8IT" firstAttribute="top" secondItem="oEr-bK-hL1" secondAttribute="top" constant="12" id="wlY-mZ-xVR"/>
                     </constraints>
@@ -52,6 +62,10 @@
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="oEr-bK-hL1" secondAttribute="trailing" constant="4" id="rfd-WS-9uS"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <connections>
+                <outlet property="fileNameLabel" destination="pV7-Kz-Ugx" id="XCq-aw-H81"/>
+                <outlet property="uploadButton" destination="s3g-AQ-FfS" id="CR6-Iq-2vj"/>
+            </connections>
             <point key="canvasLocation" x="137.68115942028987" y="152.67857142857142"/>
         </view>
     </objects>
